JAX-RS/JAX-RS/JAXRS_servlet3_simple_post_multiple_path_params/ii
Hello.java:20: error: package tem does not exist
    System.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");
                                                           ^
Hello.java:20: error: package tem does not exist
    System.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");
                                                                                                            ^
Hello.java:20: error: package tem does not exist
    System.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");
                                                                                                                                                             ^
Hello.java:20: error: package tem does not exist
    System.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");tem.out.println("Data received was "+myint+"\n");
                                                                                                                                                                                                              ^
4 errors
